# cuentocuestave

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: ci.yml  deploy.yml  scrape-canary.yml
apps/admin/: index.html  package.json
apps/admin/src/: App.tsx  main.tsx
apps/admin/src/auth/: stack.ts
apps/api/: pyproject.toml
apps/api/src/cuantocuestave_api/: deps.py  main.py
apps/api/src/cuantocuestave_api/auth/: neon_auth.py
apps/api/src/cuantocuestave_api/routers/: analytics.py  basket.py  prices.py  products.py
apps/api/src/cuantocuestave_api/routers/admin/: anomalies.py  costs.py  matching.py  scrapes.py
apps/api/src/cuantocuestave_api/schemas/: product.py
apps/web/: astro.config.mjs  package.json
apps/web/src/components/: Layout.astro
apps/web/src/lib/: api-client.ts
apps/web/src/pages/: index.astro
apps/workers/: pyproject.toml
apps/workers/src/cuantocuestave_workers/: __init__.py  broker.py  scheduler.py
apps/workers/src/cuantocuestave_workers/actors/: exchange_rates.py  match.py  ml_anomaly.py  ml_cluster.py  ml_forecast.py  refresh_views.py  scrape.py
apps/workers/tests/: test_exchange_rates_actor.py  test_scrape_actor.py
data/: canasta_basica_seed.yaml
docs/adr/: 0001-monorepo.md  0002-frontend-astro-vite-split.md  0003-scrapling-vs-playwright-puro.md  0004-pgvector-vs-qdrant.md  0005-openrouter-deepseek-default.md  0006-no-auth-publica-sin-alertas.md  0007-neon-auth-admin-only.md
infra/caddy/: Caddyfile
infra/docker/: admin.Dockerfile  api.Dockerfile  nginx-web.conf  web.Dockerfile  workers.Dockerfile
infra/docker/compose/: docker-compose.dev.yml  docker-compose.yml
scripts/: seed_canasta.py
(+1 files in other folders)
