[project]
name = "cuantocuestave-api"
version = "0.1.0"
description = "FastAPI HTTP adapter"
requires-python = ">=3.12"
dependencies = [
    "cuantocuestave-application",
    "cuantocuestave-infrastructure",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-jose[cryptography]>=3.3",
    "pyjwt>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuantocuestave_api"]
