[project]
name = "cuantocuestave-workers"
version = "0.1.0"
description = "Dramatiq workers + APScheduler cron"
requires-python = ">=3.12"
dependencies = [
    "cuantocuestave-application",
    "cuantocuestave-infrastructure",
    "cuantocuestave-ml",
    "dramatiq[redis]>=1.17",
    "apscheduler>=3.11",
    "periodiq>=0.12",
]

[tool.uv.sources]
cuantocuestave-application = { workspace = true }
cuantocuestave-infrastructure = { workspace = true }
cuantocuestave-ml = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuantocuestave_workers"]
